RESOLVED FIXED241794
AX ITM: Fix for accessibility/language-attribute-change.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=241794
Summary AX ITM: Fix for accessibility/language-attribute-change.html in isolated tree...
Andres Gonzalez
Reported 2022-06-20 18:40:16 PDT
This is test consistently times out in ITM.
Attachments
Patch (2.43 KB, patch)
2022-06-20 18:47 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2022-06-20 18:40:25 PDT
Andres Gonzalez
Comment 2 2022-06-20 18:47:46 PDT
EWS
Comment 3 2022-06-21 06:16:56 PDT
Committed r295685 (251690@main): <https://commits.webkit.org/251690@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460362 [details].
Note You need to log in before you can comment on or make changes to this bug.