AX ITM: Fix for accessibility/language-attribute-change.html in isolated tree mode. web content https://bugs.webkit.org/show_bug.cgi?id=241794

Reviewed by Chris Fleizach.

* Source/WebCore/accessibility/AXObjectCache.cpp:
When the lang attribute changes, we need to update the object for which the attribute changed in addition to updating its children.
(WebCore::AXObjectCache::updateIsolatedTree):
* Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
(WTR::AccessibilityController::executeOnAXThreadAndWait):
Made the complete local variable std::atomic since it is accessed on and off the main thread.

Canonical link: https://commits.webkit.org/251690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295685 268f45cc-cd09-0410-ab3c-d52691b4dbfc