Source/WebCore/accessibility/AXObjectCache.cpp
@@ -3588,11 +3588,11 @@ void AXObjectCache::updateIsolatedTree(const Vector<std::pair<RefPtr<AXCoreObjec
         case AXValueChanged:
             updateNode(notification.first);
             break;
+        case AXLanguageChanged:
         case AXRowCountChanged:
             updateNode(notification.first);
             FALLTHROUGH;
         case AXChildrenChanged:
-        case AXLanguageChanged:
         case AXRowCollapsed:
         case AXRowExpanded: {
             auto updatedFields = updatedObjects.get(notification.first->objectID());
